--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ article {
 	z-index: -1;
 }
 
+svg {
+	fill: currentColor;
+	width: 100%;
+	max-width: 1rem;
+}
+
 .hidden {
 	display: none;
 }
@@ -75,3 +81,4 @@ input:focus {
 #edit:active {
 	background: var(--txt-mtd-drk);
 }
+
